--- a/index.html
+++ b/index.html
@@ -17,12 +17,9 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16x16.png" />
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200;300;400;600&family=Playfair+Display:wght@400;700&family=Raleway:wght@300;400;500;600;700&family=Unbounded:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200;300;400;500;600&family=Lato:ital,wght@0,300;0,400;0,700;1,400&family=Playfair+Display:wght@400;500;700&family=Raleway:wght@300;400;500;600;700&family=Unbounded:wght@200;400;700&display=swap" rel="stylesheet">
     <!-- Classic Styles -->
     <link href="/static/reset.css" rel="stylesheet" type="text/css" />
     <!-- Apple -->
