--- a/index.html
+++ b/index.html
@@ -10,21 +10,20 @@
     <meta content="text/html; charset=utf-8" http-equiv="content-type" />
     <!-- ### Manifest and icons ### -->
     <!-- General -->
-    <link rel="manifest" href="/static/site.webmanifest" />
     <meta name="theme-color" content="#ffffff" />
     <meta name="application-name" content="App" />
-    <link rel="shortcut icon" href="/static/favicon.ico" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16x16.png" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200;300;400;500;600&family=Lato:ital,wght@0,300;0,400;0,700;1,400&family=Playfair+Display:wght@400;500;700&family=Raleway:wght@300;400;500;600;700&family=Unbounded:wght@200;400;700&display=swap" rel="stylesheet">
-    <!-- Classic Styles -->
-    <link href="/static/reset.css" rel="stylesheet" type="text/css" />
     <!-- Apple -->
     <meta name="apple-mobile-web-app-title" content="App" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <!-- Classic Styles -->
+    <link href="/assets/reset.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div id="app" style="height: 100%; width: 100%"><!--app-html--></div>
