--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200;300;400;500;600&family=Lato:ital,wght@0,300;0,400;0,700;1,400&family=Playfair+Display:wght@400;500;700&family=Raleway:wght@300;400;500;600;700&family=Unbounded:wght@200;400;700&display=swap" rel="stylesheet">
-    <!-- Apple -->
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500;700&family=IBM+Plex+Sans:wght@200;300;400;600&family=Lato:ital,wght@0,300;0,400;0,700;1,400&family=Playfair+Display:wght@400;700&family=Raleway:wght@300;500;700&family=Unbounded:wght@400;700&display=swap" rel="stylesheet">    <!-- Apple -->
     <meta name="apple-mobile-web-app-title" content="App" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <!-- Classic Styles -->
